[project]
name = "ush"
version = "0.1.0"
description = "URL Shortcut Handler - manage URL/path shortcuts in the terminal"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
]

[project.scripts]
ush = "ush.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ush"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest>=8.0"]
